# ai-collab

./: .gitignore  README.md  pyproject.toml
configs/agents/: claude.toml  codex.toml  gemini.toml
configs/templates/: BUG.md  TASK.md  VERIFY.md
configs/workflows/: default.toml  pair.toml
docs/: PRD.md
src/ai_collab/: __init__.py  ask_model.py  cli.py  config.py  messenger.py  models.py  task_manager.py  workspace.py
tests/: test_config.py  test_messenger.py  test_models.py
