[project]
name = "ai-collab"
version = "0.1.0"
description = "Terminal-native multi-AI-model collaboration workstation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "tomli>=2.0;python_version<'3.11'",
    "pydantic>=2.0",
]

[project.scripts]
ai-collab = "ai_collab.cli:main"
ask-model = "ai_collab.ask_model:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_collab"]

[tool.hatch.build.targets.wheel.shared-data]
"configs" = "share/ai-collab/configs"

[tool.pytest.ini_options]
testpaths = ["tests"]
